chore: Run Prettier on all files

--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -20,10 +20,10 @@
     "drop": "yarn redis:drop && yarn typeorm:drop && yarn typeorm:drop:issuer",
     "redis:drop": "redis-cli flushall",
     "deploy:heroku": "make -B build deploy-heroku",
-    "prettier": "prettier --check --config-precedence file-override './src/**/*'",
-    "prettier:fix": "prettier --write --config-precedence file-override './src/**/*'",
-    "lint": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" \"migrations/**/*{.ts,.tsx}\" --no-error-on-unmatched-pattern",
-    "lint:fix": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" \"migrations/**/*{.ts,.tsx}\" --fix --no-error-on-unmatched-pattern",
+    "prettier": "prettier --check --config-precedence file-override './{src,migrations,test}/**/*'",
+    "prettier:fix": "prettier --write --config-precedence file-override './{src,migrations,test}/**/*'",
+    "lint": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --no-error-on-unmatched-pattern",
+    "lint:fix": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --fix --no-error-on-unmatched-pattern",
     "migrate": "yarn typeorm:run:issuer && yarn typeorm:run && yarn typeorm:run:certificate",
     "migrate:docker": "yarn typeorm:run:issuer && node_modules/typeorm/cli.js --config dist/js/ormconfig.js migration:run",
     "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js --config ormconfig-dev.ts",
