--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,9 +16,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
-
       - uses: actions/setup-node@v4
         with:
           node-version: lts/gallium
@@ -29,8 +26,7 @@ jobs:
           npm i -g @microsoft/rush
           npm i -g pnpm
 
-      - name: Install drec-api
-        working-directory: apps/drec-api
+      - name: Install drec-origin
         run: |
           rush update
           rush install
@@ -46,8 +42,32 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/gallium
+
+      - name: Install tooling
+        run: |
+          npm i -g yarn
+          npm i -g @microsoft/rush
+          npm i -g pnpm
+
+      - name: Install drec-origin
+        run: |
+          rush update
+          rush install
+
+      - name: Run ESLint
+        working-directory: apps/drec-api
+        run: pnpm run lint
+        continue-on-error: true
+
+  check-build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - uses: actions/setup-node@v4
         with:
@@ -59,13 +79,10 @@ jobs:
           npm i -g @microsoft/rush
           npm i -g pnpm
 
-      - name: Install drec-api
-        working-directory: apps/drec-api
+      - name: Install drec-origin
         run: |
           rush update
           rush install
 
-      - name: Run ESLint
-        working-directory: apps/drec-api
-        run: pnpm run lint
-        continue-on-error: true
+      - name: Build drec-origin
+        run: rush build --verbose
