unit-testing: tsconfig fix

--- a/apps/drec-api/tsconfig.json
+++ b/apps/drec-api/tsconfig.json
@@ -8,7 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2020",
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "./dist/js",
     "baseUrl": "./",
     "incremental": true,
     "moduleResolution": "node",
