Create default admin: deleted created new migration file, added create admin code in seed migration file, added foew more objects at admin.json, changed readme file, env.example file updated with admin variables

--- a/.env.example
+++ b/.env.example
@@ -99,3 +99,6 @@ IREC_EVIDENT_API_Token=
 CLIENT_CREDENTIALS_ENCRYPTION_KEY=stuFri60vERir7sAx96RLkifrOR4yUqi
 client_id=
 client_secret=
+
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
