admin env variables comment added, moved create admin indtructions into appropriate line

--- a/.env.example
+++ b/.env.example
@@ -100,5 +100,6 @@ CLIENT_CREDENTIALS_ENCRYPTION_KEY=stuFri60vERir7sAx96RLkifrOR4yUqi
 client_id=
 client_secret=
 
+# DEFAULT ADMIN CREDENTIAL
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
