update some e2e test script

--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -29,13 +29,13 @@
     "typeorm:run": "yarn typeorm migration:run",
     "typeorm:run:issuer": "node_modules/typeorm/cli.js migration:run --config node_modules/@energyweb/issuer-api/dist/js/ormconfig.js",
     "typeorm:run:certificate": "node_modules/typeorm/cli.js migration:run --config node_modules/@energyweb/origin-247-certificate/dist/js/ormconfig.js",
-    "typeorm:drop": "yarn typeorm schema:drop",
+    "typeorm:drop": "yarn typeorm schema:drop && yarn typeorm:drop:issuer && yarn typeorm:drop:certificate",
     "typeorm:drop:issuer": "node_modules/typeorm/cli.js schema:drop --config node_modules/@energyweb/issuer-api/dist/js/ormconfig.js",
+    "typeorm:drop:certificate": "node_modules/typeorm/cli.js schema:drop --config node_modules/@energyweb/origin-247-certificate/dist/js/ormconfig.js",
     "typeorm:dropAndMigrate": "yarn typeorm:drop && yarn typeorm:run",
     "test:jest": "jest",
-    "test:mocha": "mocha -r ts-node/register 'src/**/*.spec.ts' --timeout 60000 --exit",
-    "test:e2e:mocha": "mocha -r ts-node/register test/*.e2e-spec.ts --timeout 60000 --exit",
-    "test:e2e": "concurrently --success first --kill-others -n eth,test \"wait-on tcp:8545 && yarn typeorm:drop && yarn migrate && yarn test:e2e:mocha\"",
+    "test:e2e:jest": "mocha -r ts-node/register test/*.e2e-spec.ts --timeout 60000 --exit",
+    "test:e2e": "yarn typeorm:drop && yarn migrate && yarn test:e2e:jest",
     "test:e2e:single": "sh ./scripts/test-e2e-single.sh",
     "compodoc": "npx compodoc -p tsconfig.json -n \"Drec api documentation\"",
     "coverage:jest": "jest --coverage"
@@ -74,7 +74,6 @@
     "class-transformer": "0.3.1",
     "class-validator": "0.13.1",
     "clean-deep": "3.4.0",
-    "concurrently": "5.3.0",
     "crypto-js": "4.1.1",
     "csv-parse": "^5.1.0",
     "csv-parser": "^3.0.0",
