--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -9,35 +9,35 @@
   "scripts": {
     "generate-nest": "nest g resource",
     "start": "nest start -p tsconfig.json",
-    "start:dev": "yarn migrate && nest start --watch -p tsconfig.json",
+    "start:dev": "pnpm migrate && nest start --watch -p tsconfig.json",
     "start:debug": "nest start --debug --watch -p tsconfig.json",
     "start:prod": "node dist/js/src/main",
     "prebuild": "shx rm -rf dist",
-    "build": "yarn build:ts",
+    "build": "pnpm build:ts",
     "build:ts": "tsc -b tsconfig.json",
     "build:containers": "make build",
     "clean": "shx rm -rf dist",
-    "drop": "yarn redis:drop && yarn typeorm:drop && yarn typeorm:drop:issuer",
+    "drop": "pnpm redis:drop && pnpm typeorm:drop && pnpm typeorm:drop:issuer",
     "redis:drop": "redis-cli flushall",
     "deploy:heroku": "make -B build deploy-heroku",
     "prettier": "prettier --check --config-precedence file-override './{src,migrations,test}/**/*'",
     "prettier:fix": "prettier --write --config-precedence file-override './{src,migrations,test}/**/*'",
     "lint": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --no-error-on-unmatched-pattern",
     "lint:fix": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --fix --no-error-on-unmatched-pattern",
-    "migrate": "yarn typeorm:run:issuer && yarn typeorm:run && yarn typeorm:run:certificate",
-    "migrate:docker": "yarn typeorm:run:issuer && node_modules/typeorm/cli.js --config dist/js/ormconfig.js migration:run",
+    "migrate": "pnpm typeorm:run:issuer && pnpm typeorm:run && pnpm typeorm:run:certificate",
+    "migrate:docker": "pnpm typeorm:run:issuer && node_modules/typeorm/cli.js --config dist/js/ormconfig.js migration:run",
     "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js --config ormconfig-dev.ts",
-    "typeorm:migrate": "yarn typeorm migration:generate -- -n",
-    "typeorm:run": "yarn typeorm migration:run",
+    "typeorm:migrate": "pnpm typeorm migration:generate -- -n",
+    "typeorm:run": "pnpm typeorm migration:run || { echo \"Migration failed\"; exit 1; } && echo \"Migration Successfull\"",
     "typeorm:run:issuer": "node_modules/typeorm/cli.js migration:run --config node_modules/@energyweb/issuer-api/dist/js/ormconfig.js",
     "typeorm:run:certificate": "node_modules/typeorm/cli.js migration:run --config node_modules/@energyweb/origin-247-certificate/dist/js/ormconfig.js",
-    "typeorm:drop": "yarn typeorm schema:drop",
+    "typeorm:drop": "pnpm typeorm schema:drop && pnpm typeorm:drop:issuer && pnpm typeorm:drop:certificate",
     "typeorm:drop:issuer": "node_modules/typeorm/cli.js schema:drop --config node_modules/@energyweb/issuer-api/dist/js/ormconfig.js",
-    "typeorm:dropAndMigrate": "yarn typeorm:drop && yarn typeorm:run",
+    "typeorm:drop:certificate": "node_modules/typeorm/cli.js schema:drop --config node_modules/@energyweb/origin-247-certificate/dist/js/ormconfig.js",
+    "typeorm:dropAndMigrate": "pnpm typeorm:drop && pnpm typeorm:run",
     "test:jest": "jest",
-    "test:mocha": "mocha -r ts-node/register 'src/**/*.spec.ts' --timeout 60000 --exit",
-    "test:e2e:mocha": "mocha -r ts-node/register test/*.e2e-spec.ts --timeout 60000 --exit",
-    "test:e2e": "concurrently --success first --kill-others -n eth,test \"yarn run:ganache\" \"wait-on tcp:8545 && yarn typeorm:drop && yarn migrate && yarn test:e2e:mocha\"",
+    "test:e2e:jest": "mocha -r ts-node/register test/*.e2e-spec.ts --timeout 60000 --exit",
+    "test:e2e": "pnpm typeorm:drop && pnpm migrate && pnpm test:e2e:jest",
     "test:e2e:single": "sh ./scripts/test-e2e-single.sh",
     "run:ganache": "ganache-cli -q -m 'stone eyebrow bronze glide upon subject camera cushion rice outside swing casual' -l 8000000 -e 1000000 -a 20",
     "compodoc": "npx compodoc -p tsconfig.json -n \"Drec api documentation\""
