migrate command added in Dockerfile

--- a/apps/drec-api/Dockerfile
+++ b/apps/drec-api/Dockerfile
@@ -12,11 +12,12 @@ RUN npm i -g pnpm
 WORKDIR /dist/src/app/apps/drec-api
 
 RUN npm install --legacy-peer-deps
+RUN npm run migrate
 RUN npm run build
 RUN rm -rf ./deployment
 RUN mkdir ./deployment
 RUN rush deploy -p @energyweb/origin-drec-api -t ./deployment --overwrite
-RUN yarn add swagger-ui-express
+RUN pnpm add swagger-ui-express
 
 # RUN mkdir /var/deployment
 # COPY ./ /var/deployment
