--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -25,11 +25,11 @@
     "lint:fix": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --fix --no-error-on-unmatched-pattern",
     "migrate": "pnpm typeorm:run:issuer && pnpm typeorm:run && pnpm typeorm:run:certificate",
     "migrate:docker": "pnpm typeorm:run:issuer && node_modules/typeorm/cli.js --config dist/js/ormconfig.js migration:run",
-    "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js --config ormconfig-dev.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js --dataSource ormconfig-dev.ts",
     "typeorm:migrate": "pnpm typeorm migration:generate -- -n",
     "typeorm:run": "pnpm typeorm migration:run || { echo \"Migration failed\"; exit 1; } && echo \"Migration Successfull\"",
-    "typeorm:run:issuer": "node_modules/typeorm/cli.js migration:run --config node_modules/@energyweb/issuer-api/dist/js/ormconfig.js",
-    "typeorm:run:certificate": "node_modules/typeorm/cli.js migration:run --config node_modules/@energyweb/origin-247-certificate/dist/js/ormconfig.js",
+    "typeorm:run:issuer": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run -d ormconfig.ts",
+    "typeorm:run:certificate": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run --dataSource ormconfig.ts",
     "typeorm:drop": "pnpm typeorm schema:drop && pnpm typeorm:drop:issuer && pnpm typeorm:drop:certificate",
     "typeorm:drop:issuer": "node_modules/typeorm/cli.js schema:drop --config node_modules/@energyweb/issuer-api/dist/js/ormconfig.js",
     "typeorm:drop:certificate": "node_modules/typeorm/cli.js schema:drop --config node_modules/@energyweb/origin-247-certificate/dist/js/ormconfig.js",
@@ -116,11 +116,12 @@
     "stream": "^0.0.2",
     "swagger-ui-express": "4.1.6",
     "terser": "^5.14.2",
-    "typeorm": "0.3.0",
+    "typeorm": "0.3.12",
     "uglify-js": "2.6.0",
     "underscore": "^1.12.1",
     "uuid": "8.3.2",
-    "sql-parser": "~0.5.0"
+    "sql-parser": "~0.5.0",
+    "express": "4.0.0"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.22",
