--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -96,7 +96,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "0.5.40",
     "multer": "1.4.2",
-    "nanoid": "~3.1.30",
+    "nanoid": "3.1.31",
     "nodemailer": "^6.6.3",
     "passport": "0.4.1",
     "passport-http-bearer": "1.0.1",
