--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -97,7 +97,7 @@
     "moment-timezone": "0.5.40",
     "multer": "1.4.2",
     "nanoid": "3.1.31",
-    "nodemailer": "^6.6.3",
+    "nodemailer": "6.9.9",
     "passport": "0.6.0",
     "passport-http-bearer": "1.0.1",
     "passport-jwt": "4.0.0",
