--- a/integrators-scripts/package.json
+++ b/integrators-scripts/package.json
@@ -14,6 +14,7 @@
         "csv-parser": "^3.0.0",
         "dotenv": "^10.0.0",
         "form-data": "^4.0.0",
-        "luxon": "^2.5.2"
+        "luxon": "^2.5.2",
+        "minimist": "^1.2.6"
     }
 }
