--- a/apps/drec-api/Dockerfile.migrations
+++ b/apps/drec-api/Dockerfile.migrations
@@ -1,10 +1,15 @@
-FROM node:14-alpine
-
+FROM node:16-alpine AS build
+ 
 RUN apk --no-cache add bash
-
-RUN mkdir /var/deployment
-COPY ./ /var/deployment
-
-WORKDIR /var/deployment/apps/drec-api
-
-CMD ["/bin/bash","-c", "yarn migrate:docker"]
+ 
+WORKDIR /dist/src/app
+RUN npm cache clean --force
+COPY . .
+ 
+RUN npm i -g @microsoft/rush
+RUN npm i -g pnpm
+ 
+WORKDIR /dist/src/app/apps/drec-api
+ 
+RUN npm install --legacy-peer-deps
+RUN npm run migrate
