Resolved query conflicts due to typeorm upgrade, customised ormconfig for issuer-api and certificate_247, script changed as per new version of typeorm

--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -28,8 +28,8 @@
     "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js --dataSource ormconfig-dev.ts",
     "typeorm:migrate": "pnpm typeorm migration:generate -- -n",
     "typeorm:run": "pnpm typeorm migration:run || { echo \"Migration failed\"; exit 1; } && echo \"Migration Successfull\"",
-    "typeorm:run:issuer": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run -d ormconfig.ts",
-    "typeorm:run:certificate": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run --dataSource ormconfig.ts",
+    "typeorm:run:issuer": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run --dataSource ormconfig-issuer-api.ts",
+    "typeorm:run:certificate": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run --dataSource ormconfig-certificate.ts",
     "typeorm:drop": "pnpm typeorm schema:drop && pnpm typeorm:drop:issuer && pnpm typeorm:drop:certificate",
     "typeorm:drop:issuer": "node_modules/typeorm/cli.js schema:drop --config node_modules/@energyweb/issuer-api/dist/js/ormconfig.js",
     "typeorm:drop:certificate": "node_modules/typeorm/cli.js schema:drop --config node_modules/@energyweb/origin-247-certificate/dist/js/ormconfig.js",
