--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install tooling
         run: |
           npm i -g @microsoft/rush
-          npm i -g pnpm
+          npm i -g pnpm@6
 
       - name: Install drec-origin
         run: |
