Specified Pnpm version number at Deploy Github Pages action

--- a/.github/workflows/deploy-gh-pages.yaml
+++ b/.github/workflows/deploy-gh-pages.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Install tooling
         run: |
           npm i -g @microsoft/rush
-          npm i -g pnpm
+          npm i -g pnpm@6
 
       - name: Install drec-api
         working-directory: apps/drec-api
