--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install tooling
         run: |
           npm i -g @microsoft/rush
-          npm i -g pnpm@6
+          npm i -g pnpm
 
       - name: Install drec-origin
         run: |
@@ -47,7 +47,7 @@ jobs:
       - name: Install tooling
         run: |
           npm i -g @microsoft/rush
-          npm i -g pnpm@6
+          npm i -g pnpm
 
       - name: Install drec-origin
         run: |
@@ -72,7 +72,7 @@ jobs:
       - name: Install tooling
         run: |
           npm i -g @microsoft/rush
-          npm i -g pnpm@6
+          npm i -g pnpm
 
       - name: Install drec-origin
         run: |
