--- a/apps/drec-api/Dockerfile
+++ b/apps/drec-api/Dockerfile
@@ -7,7 +7,7 @@ RUN npm cache clean --force
 COPY . .
 
 RUN npm i -g @microsoft/rush
-RUN npm i -g pnpm
+RUN npm i -g pnpm@6
 
 WORKDIR /dist/src/app/apps/drec-api
 
