--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -46,7 +46,7 @@
   },
   "dependencies": {
     "@energyweb/energy-api-influxdb": "0.8.0",
-    "@energyweb/issuer": "7.0.1",
+    "@energyweb/issuer": "6.0.2-alpha.1646058469.0",
     "@energyweb/issuer-api": "0.4.1-alpha.1634225870.0",
     "@energyweb/origin-247-certificate": "4.1.5",
     "@energyweb/origin-backend": "11.0.2-alpha.1634225870.0",
