update version of energyweb.issuer, common,core,cqur,typeorm,rxjs,passport and typescript

--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -45,7 +45,7 @@
     "drec-backend": "./bin/drec-api"
   },
   "dependencies": {
-    "@energyweb/energy-api-influxdb": "0.8.0",
+    "@energyweb/energy-api-influxdb": "0.8.3",
     "@energyweb/issuer": "6.0.2-alpha.1646058469.0",
     "@energyweb/issuer-api": "0.4.1-alpha.1634225870.0",
     "@energyweb/origin-247-certificate": "4.1.5",
@@ -60,15 +60,15 @@
     "@nestjs/axios": "~0.0.3",
     "@nestjs/bull": "0.4.2",
     "@nestjs/common": "8.1.1",
-    "@nestjs/config": "0.6.3",
-    "@nestjs/core": "7.6.13",
-    "@nestjs/cqrs": "7.0.1",
-    "@nestjs/jwt": "7.2.0",
-    "@nestjs/passport": "7.1.5",
-    "@nestjs/platform-express": "7.6.13",
+    "@nestjs/config": "1.0.1",
+    "@nestjs/core": "8.1.1",
+    "@nestjs/cqrs": "8.0.0",
+    "@nestjs/jwt": "8.0.0",
+    "@nestjs/passport": "8.0.1",
+    "@nestjs/platform-express": "8.1.1",
     "@nestjs/schedule": "1.0.1",
-    "@nestjs/swagger": "4.7.15",
-    "@nestjs/typeorm": "7.1.5",
+    "@nestjs/swagger": "5.2.1",
+    "@nestjs/typeorm": "8.0.2",
     "ansi-regex": "^4.1.1",
     "aws-sdk": "^2.1272.0",
     "axios": "0.28.0",
@@ -110,7 +110,7 @@
     "reflect-metadata": "^0.1.13",
     "rijndael-js": "2.0.0",
     "rimraf": "^3.0.2",
-    "rxjs": "6.6.7",
+    "rxjs": "^7.1.0",
     "shell-quote": "^1.7.3",
     "simple-get": "^2.8.2",
     "stream": "^0.0.2",
@@ -126,7 +126,7 @@
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.22",
     "@nestjs/cli": "7.5.4",
-    "@nestjs/testing": "7.6.5",
+    "@nestjs/testing": "8.1.1",
     "@types/bcryptjs": "2.4.2",
     "@types/bull": "3.15.1",
     "@types/chai": "4.2.18",
