--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -25,11 +25,11 @@
     "lint:fix": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --fix --no-error-on-unmatched-pattern",
     "migrate": "pnpm typeorm:run:issuer && pnpm typeorm:run && pnpm typeorm:run:certificate",
     "migrate:docker": "pnpm typeorm:run:issuer && node_modules/typeorm/cli.js --config dist/js/ormconfig.js migration:run",
-    "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js --dataSource ormconfig-dev.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js --config ormconfig-dev.ts",
     "typeorm:migrate": "pnpm typeorm migration:generate -- -n",
     "typeorm:run": "pnpm typeorm migration:run || { echo \"Migration failed\"; exit 1; } && echo \"Migration Successfull\"",
-    "typeorm:run:issuer": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run --dataSource ormconfig-issuer-api.ts",
-    "typeorm:run:certificate": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run --dataSource ormconfig-certificate.ts",
+    "typeorm:run:issuer": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run --config node_modules/@energyweb/issuer-api/dist/js/ormconfig.js",
+    "typeorm:run:certificate": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js migration:run --config node_modules/@energyweb/origin-247-certificate/dist/js/ormconfig.js",
     "typeorm:drop": "pnpm typeorm schema:drop && pnpm typeorm:drop:issuer && pnpm typeorm:drop:certificate",
     "typeorm:drop:issuer": "node_modules/typeorm/cli.js schema:drop --config node_modules/@energyweb/issuer-api/dist/js/ormconfig.js",
     "typeorm:drop:certificate": "node_modules/typeorm/cli.js schema:drop --config node_modules/@energyweb/origin-247-certificate/dist/js/ormconfig.js",
@@ -47,7 +47,7 @@
   "dependencies": {
     "@energyweb/energy-api-influxdb": "0.8.3",
     "@energyweb/issuer": "6.0.2-alpha.1646058469.0",
-    "@energyweb/issuer-api": "0.4.1-alpha.1634225870.0",
+    "@energyweb/issuer-api": "0.7.1",
     "@energyweb/origin-247-certificate": "4.1.5",
     "@energyweb/origin-backend": "11.0.2-alpha.1634225870.0",
     "@energyweb/origin-backend-core": "8.0.4-alpha.1634225870.0",
@@ -98,7 +98,7 @@
     "multer": "1.4.2",
     "nanoid": "3.1.31",
     "nodemailer": "6.9.9",
-    "passport": "0.6.0",
+    "passport": "0.4.0",
     "passport-http-bearer": "1.0.1",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
@@ -116,7 +116,7 @@
     "stream": "^0.0.2",
     "swagger-ui-express": "4.1.6",
     "terser": "^5.14.2",
-    "typeorm": "0.3.12",
+    "typeorm": "^0.2.34",
     "uglify-js": "2.6.0",
     "underscore": "^1.12.1",
     "uuid": "8.3.2",
