--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -110,7 +110,7 @@
     "reflect-metadata": "^0.1.13",
     "rijndael-js": "2.0.0",
     "rimraf": "^3.0.2",
-    "rxjs": "7.1.0",
+    "rxjs": "^7.1.0",
     "shell-quote": "^1.7.3",
     "simple-get": "^2.8.2",
     "stream": "^0.0.2",
