--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vitepress": "^1.1.4"
+    "vitepress": "^1.1.4",
+    "vitepress-sidebar": "^1.22.0"
   }
 }
