--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -21,8 +21,9 @@
     "redis:drop": "redis-cli flushall",
     "prettier": "prettier --check --config-precedence file-override './{src,migrations,test}/**/*'",
     "prettier:fix": "prettier --write --config-precedence file-override './{src,migrations,test}/**/*'",
-    "lint": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --no-error-on-unmatched-pattern",
-    "lint:fix": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --fix --no-error-on-unmatched-pattern",
+    "lint": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\"",
+    "lint:error": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --quiet",
+    "lint:fix": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --fix",
     "migrate": "pnpm typeorm:run:issuer && pnpm typeorm:run && pnpm typeorm:run:certificate",
     "migrate:docker": "pnpm typeorm:run:issuer && node_modules/typeorm/cli.js --config dist/js/ormconfig.js migration:run",
     "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js --config ormconfig-dev.ts",
