Enable CI for `develop`

--- a/.github/workflows/check-generic.yaml
+++ b/.github/workflows/check-generic.yaml
@@ -6,10 +6,10 @@ name: Check Generic
 on:
   push:
     branches:
-      - main
+      - develop
   pull_request:
     branches:
-      - main
+      - develop
 
 jobs:
   editorconfig-checker:
