--- a/.github/workflows/check-generic.yaml
+++ b/.github/workflows/check-generic.yaml
@@ -30,11 +30,11 @@ jobs:
       - name: Run markdownlint-cli2
         uses: DavidAnson/markdownlint-cli2-action@v13
 
-  # yamllint:
-  #   name: Run yamllint
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-  #     - name: Run yamllint
-  #       run: yamllint .
+  yamllint:
+    name: Run yamllint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Run yamllint
+        run: yamllint .
