Add Mermaid using plugin

--- a/docs/package.json
+++ b/docs/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "mermaid": "^10.9.1",
     "vitepress": "^1.1.4",
+    "vitepress-plugin-mermaid": "^2.0.16",
     "vitepress-sidebar": "^1.22.0"
   }
 }
