--- a/docs/package.json
+++ b/docs/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:preview": "vitepress preview",
+    "prettier:fix": "prettier --write './{dev_docs,usage_guide,introduction}/**/*.md'"
   },
   "author": "",
   "license": "ISC",
