--- a/.github/workflows/check-docs.yaml
+++ b/.github/workflows/check-docs.yaml
@@ -13,7 +13,7 @@ jobs:
     name: Lint prettier
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: actions/setup-node@v4
         with:
@@ -22,3 +22,22 @@ jobs:
       - name: Run Prettier on Docs
         working-directory: docs
         run: npx prettier . --check
+
+  check-build:
+    name: Check Docs build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/gallium
+
+      - name: Install tooling
+        working-directory: docs
+        run: npm install
+
+      - name: Build docs with VitePress
+        working-directory: docs
+        run: npm run docs:build
