--- a/docs/package.json
+++ b/docs/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview",
-    "prettier:fix": "prettier --write './introduction/**/*.md'"
+    "docs:preview": "vitepress preview"
   },
   "author": "",
   "license": "ISC",
