--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -57,7 +57,7 @@
     "@ethersproject/bignumber": "5.3.0",
     "@influxdata/influxdb-client": "1.9.0",
     "@mapbox/timespace": "2.0.4",
-    "@nestjs-modules/mailer": "^1.6.0",
+    "@nestjs-modules/mailer": "2.0.2",
     "@nestjs/axios": "~0.0.3",
     "@nestjs/bull": "0.4.2",
     "@nestjs/common": "8.1.1",
