--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -126,7 +126,7 @@
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.22",
-    "@nestjs/cli": "7.5.4",
+    "@nestjs/cli": "~10.3.2",
     "@nestjs/testing": "8.1.1",
     "@types/bcryptjs": "2.4.2",
     "@types/bull": "3.15.1",
