--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -153,7 +153,7 @@
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "7.0.0",
     "jest": "26.6.0",
-    "mocha": "8.2.1",
+    "mocha": "~10.4.0",
     "prettier": "~3.2.5",
     "shx": "0.3.3",
     "sinon": "^17.0.1",
