--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -64,7 +64,7 @@
     "@nestjs/config": "1.0.1",
     "@nestjs/core": "8.1.1",
     "@nestjs/cqrs": "8.0.0",
-    "@nestjs/jwt": "8.0.0",
+    "@nestjs/jwt": "~10.2.0",
     "@nestjs/passport": "8.0.1",
     "@nestjs/platform-express": "8.1.1",
     "@nestjs/schedule": "1.0.1",
@@ -101,7 +101,7 @@
     "nodemailer": "6.9.9",
     "passport": "0.6.0",
     "passport-http-bearer": "1.0.1",
-    "passport-jwt": "4.0.0",
+    "passport-jwt": "~4.0.1",
     "passport-local": "1.0.0",
     "passport-oauth2-client-password": "0.1.2",
     "passport-strategy": "1.x.x",
