Format formulas using LaTeX

--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "markdown-it-mathjax3": "^4.3.2",
     "mermaid": "^10.9.1",
     "vitepress": "^1.1.4",
     "vitepress-plugin-mermaid": "^2.0.16",
