--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -47,13 +47,13 @@
   },
   "dependencies": {
     "@energyweb/energy-api-influxdb": "0.8.3",
-    "@energyweb/issuer": "7.0.1",
+    "@energyweb/issuer": "6.0.2-alpha.1646058469.0",
     "@energyweb/issuer-api": "0.7.1",
     "@energyweb/origin-247-certificate": "4.1.5",
     "@energyweb/origin-backend": "11.2.3",
     "@energyweb/origin-backend-core": "8.2.3",
-    "@energyweb/origin-backend-utils": "1.8.3",
-    "@energyweb/utils-general": "11.2.3",
+    "@energyweb/origin-backend-utils": "1.8.2-alpha.1646058469.0",
+    "@energyweb/utils-general": "11.2.2-alpha.1646058469.0",
     "@ethersproject/bignumber": "5.3.0",
     "@influxdata/influxdb-client": "1.9.0",
     "@mapbox/timespace": "2.0.4",
