--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -152,13 +152,13 @@
     "eslint": "7.15.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "7.0.0",
-    "jest": "26.6.0",
+    "jest": "29.7.0",
     "mocha": "~10.4.0",
     "prettier": "~3.2.5",
     "shx": "0.3.3",
     "sinon": "^17.0.1",
     "supertest": "6.0.1",
-    "ts-jest": "^26.5.0",
+    "ts-jest": "29.2.3",
     "ts-node": "9.1.0",
     "typescript": "4.1.3",
     "wait-on": "5.2.1"
