--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -21,7 +21,7 @@
     "redis:drop": "redis-cli flushall",
     "prettier": "prettier --check --config-precedence file-override './{src,migrations,test}/**/*'",
     "prettier:fix": "prettier --write --config-precedence file-override './{src,migrations,test}/**/*'",
-    "lint": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\"",
+    "lint": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --max-warnings=0",
     "lint:error": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --quiet",
     "lint:fix": "eslint \"{src,migrations,test}/**/*{.ts,.tsx}\" --fix",
     "migrate": "pnpm typeorm:run:issuer && pnpm typeorm:run && pnpm typeorm:run:certificate",
