--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -106,8 +106,8 @@ jobs:
 
       - name: Run Unit Test (all)
         working-directory: apps/drec-api
-        run: pnpm run test:jest -- --passWithNoTests
+        run: pnpm run test:jest --passWithNoTests
 
       - name: Run Code Coverage (all)
         working-directory: apps/drec-api
-        run: pnpm run coverage:jest -- --passWithNoTests
+        run: pnpm run coverage:jest --passWithNoTests
