--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -76,6 +76,15 @@ jobs:
         image: redis:6
         ports:
           - 6379:6379
+      influxdb:
+        image: influxdb:2.0
+        ports:
+          - 8086:8086
+        env:
+          INFLUXDB_DB: testdb
+          INFLUXDB_ADMIN_USER: admin
+          INFLUXDB_ADMIN_PASSWORD: password
+          INFLUXDB_HTTP_AUTH_ENABLED: "true"
 
     steps:
       - name: Checkout
@@ -112,6 +121,15 @@ jobs:
         image: redis:6
         ports:
           - 6379:6379
+      influxdb:
+        image: influxdb:2.0
+        ports:
+          - 8086:8086
+        env:
+          INFLUXDB_DB: testdb
+          INFLUXDB_ADMIN_USER: admin
+          INFLUXDB_ADMIN_PASSWORD: password
+          INFLUXDB_HTTP_AUTH_ENABLED: "true"
 
     steps:
       - name: Checkout
