--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -130,7 +130,7 @@ jobs:
           INFLUXDB_ADMIN_USER: admin
           INFLUXDB_ADMIN_PASSWORD: password
           INFLUXDB_HTTP_AUTH_ENABLED: "true"
-
+          INFLUXDB_URL: http://localhost:8086
     steps:
       - name: Checkout
         uses: actions/checkout@v3
